--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
+    testImplementation 'io.mokk.mokk:1.13.13'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
